--- a/styles/main_lab_four_starter.css
+++ b/styles/main_lab_four_starter.css
@@ -55,9 +55,9 @@ body, html {
 .image-container img {
     display: block;
     width: 100%;
-    border-radius: 90px; 
     max-width: 600px;
     height: 500px;
+    border-radius: 90px;
 
 }
 .text button {
@@ -67,7 +67,8 @@ body, html {
     color: #ffffff;
     border: none;
     border-radius: 5px;
-    align-self: center;
+    display: inline-block;
+    margin-left: 250px;
 }
 
 
